[project]
name = "ai-blog-newsletter-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
