[project]
name = "ai-blog-newsletter-platform"
version = "0.6.0"
description = "AI Blog + Newsletter Automation Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "celery>=5.3.0",
    "amqp>=5.2.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "flower>=2.0.0",
    "httpx2>=2.5.0",
    "httpx>=0.28.1",
]

# REMOVE this section entirely (or keep it empty)
[project.optional-dependencies]
dev = []  # Or remove this line completely

[tool.uv]
package = false

# ── Ruff ──────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (Black handles this)
    "B008",   # do not perform function calls in default arguments (FastAPI Depends)
]

# ── Black ─────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | __pycache__
  | migrations
)/
'''

# ── MyPy ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
]

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short --no-header -q"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]